html files are ignored

--- a/main.Rmd
+++ b/main.Rmd
@@ -2,14 +2,14 @@
 title: "R Notebook"
 output: html_notebook
 ---
-
-## Required Libraries
+# Initializations
+## 1.1 Required Libraries
 ```
 library(ggplot2)
 library(data.table)
 ```
 
-Load the Data
+## 1.2 Load the Data
 ```{r}
 marker_dt <- as.data.table( read.delim("marker.txt"))
 growth_dt <- as.data.table( read.delim("growth.txt"))
@@ -17,3 +17,9 @@ gene_dt <- as.data.table( read.delim("gene.txt"))
 genotype_dt <- as.data.table( read.delim("genotype.txt"))
 expression_dt <- as.data.table( read.delim("expression.txt"))
 ```
+
+# 2. Tidy The Data
+```{r}
+
+```
+  
