expressions is tidied

--- a/main.Rmd
+++ b/main.Rmd
@@ -7,6 +7,7 @@ output: html_notebook
 ```
 library(ggplot2)
 library(data.table)
+options(warn=-1)
 ```
 
 ## 1.2 Load the Data
@@ -19,7 +20,17 @@ expression_dt <- as.data.table( read.delim("expression.txt"))
 ```
 
 # 2. Tidy The Data
-```{r}
 
+### Expressions 
+First the expressions data is melted. The strain and environment values on the column names will be values under the columns 'Strain' and 'Medium', repectively.
+```{r}
+exp_melted <- melt(expression_dt, id.vars=c(), measure.vars = colnames(expression_dt), variable.name = "Strain", value.name = "Value")
+
+exp_melted[,Medium := Strain]
+exp_melted[,Medium:=gsub(pattern = "\\..*$",replacement = "",x=Medium)]
+exp_melted[,Strain:=gsub(pattern = "^.*\\.",replacement = "",x=Strain)]
+setcolorder(exp_melted, c("Strain", "Medium", "Value"))
+head(exp_melted)
 ```
-  
+
+
