--- a/main.Rmd
+++ b/main.Rmd
@@ -158,22 +158,22 @@ ypm
 
 ```
 
-## The Difference in Lab & Wild gene counts for a given chromosome
+## The Difference in Lab & Wild marker counts for a given chromosome
 ```{r}
-given_chrom <- "seg_01B" ## The given chromosome...
-sel_markers <- data.frame(Marker = marker_dt[chrom== given_chrom,]$id)
-mygeno <- as.data.table(merge(genotype_melted, sel_markers,by= "Marker" )) ## merge, left join, on markers
-ggplot(mygeno, aes(Source)) + geom_histogram(aes(as.factor(mygeno$Source))) + facet_wrap(mygeno$Marker)
-#names(mygeno) <- genotype$strain
+given_chrom <- "chr05" ## The given chromosome... in chr05 the difference between wild and lab genes are high compared to other chromosomes.
+sel_markers <- subset(marker_dt ,chrom== given_chrom)# selected markers as data frame to merge
+mygeno <- as.data.table(merge(genotype_melted, sel_markers,by.x= "Marker" , by.y = "id")) ## merge, left join, on column Marker
+ggplot(mygeno, aes(Source)) + geom_histogram(stat="count")
+
 
 #attach(growth)
-par(mfrow=c(1,5))
-plot(growth$YPD ~ mygeno$strain, data=growth, main=given_chrom)
-plot(growth$YPD_BPS ~ mygeno[strain], data=growth, main=given_chrom)
-plot(growth$YPD_Rapa ~ mygeno[strain], data=growth, main=given_chrom)
-plot(growth$YPE ~ mygeno[strain], data=growth, main=given_chrom)
-plot(growth$YPMalt ~ mygeno[strain], data=growth, main=given_chrom)
+#par(mfrow=c(1,5))
+#plot(growth$YPD ~ mygeno$strain, data=growth, main=given_chrom)
+#plot(growth$YPD_BPS ~ mygeno[strain], data=growth, main=given_chrom)
+#plot(growth$YPD_Rapa ~ mygeno[strain], data=growth, main=given_chrom)
+#plot(growth$YPE ~ mygeno[strain], data=growth, main=given_chrom)
+#plot(growth$YPMalt ~ mygeno[strain], data=growth, main=given_chrom)
 
-ggplot(growth_dt, aes())
+#ggplot(growth_dt, aes())
 ```
 
