--- a/main.Rmd
+++ b/main.Rmd
@@ -59,3 +59,21 @@ ggplot(growth_melted, aes(medium, growth)) + geom_violin(na.rm = T)
 
 ```
 
+
+## Plot Describing Expression Vs. Growth for Each Strain
+```{r}
+exp_grouped<- exp_melted[, mean := mean(Value), by=.(Medium, Strain)]
+plot_data <- merge(exp_grouped,growth_melted, by.x = c("Medium", "Strain"), by.y =c("medium","strain") )
+
+ggplot(plot_data, aes(V1, growth)) + geom_point() + facet_wrap(~Medium)
+
+```
+
+## The Best Growing Strains For Each Media
+```{r}
+growth_melted[,mean:=mean(growth), by=strain]
+growth_melted[order(mean,decreasing = T)]
+```
+
+
+
